resubmitted updates to dependencies

--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
           </div>
         </div>
       </div>
-      <div
-        class="navbar navbar-info shadow-sm"
-        style="background-color: rgb(145, 207, 245)"
-      >
+      <div class="navbar navbar-info shadow-sm bg-light">
         <div class="container">
           <a href="#" class="navbar-brand d-flex align-items-center">
             <img
