--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </section>
       <hr />
       <section class="py-5 container">
-        <div class="px-5 mx-auto">
+        <div class="px-5 pb-4 mx-auto">
           <div class="pb-2 mx-auto h2">Data Collection Challenges</div>
           <div>
             <p class="mx-auto">
@@ -145,14 +145,14 @@
               website.[4].
             </p>
           </div>
-          <div class="col-lg-6 col-md-8 mx-auto py-3">
+          <div class="col-lg-6 col-md-8 mx-auto">
             <div class="chart">
               <canvas id="myChart"></canvas>
             </div>
           </div>
         </div>
       </section>
-      <div class="album py-5">
+      <div class="album py-2">
         <div class="container">
           <div class="px-5 pb-2 mx-auto h2">Methodological Reflection</div>
           <div>
@@ -201,15 +201,9 @@
           </div>
         </div>
 
-        <div
-          class="container"
-          style="position: relative; margin: auto; width: 80vw"
-        >
-          <canvas id="myChart2"></canvas>
-        </div>
         <div class="album">
           <div class="container">
-            <div class="px-5 pt-5 pb-2 mx-auto h2">Conclusion</div>
+            <div class="px-5 pb-2 mx-auto h2">Conclusion</div>
             <p class="px-5 pb-5 mx-auto">
               The study of feral swine populations is important, and requires
               continued methodological refinement. It would benefit from
@@ -219,6 +213,13 @@
               populations.
             </p>
           </div>
+        </div>
+
+        <div
+          class="container"
+          style="position: relative; margin: auto; width: 80vw"
+        >
+          <canvas id="myChart2"></canvas>
         </div>
       </div>
       <div class="album py-5 px-5">
@@ -386,6 +387,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="barChart.js"></script>
-    <script src="/main.js"></script>
+    <script src="/script.js"></script>
   </body>
 </html>
