--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
           <div>
             <p class="mx-auto">
               As wild animals, feral swine are resistant to being tracked and
-              counted, and their behaviors change when they are hunted. As Falyn
+              counted, and their behaviors change when they are hunted. Falyn
               Owens, a wildlife biologist with the North Carolina Wildlife
-              Resources Commission, candidly explains, "We don't in North
+              Resources Commission, explained that "We don't in North
               Carolina have a good estimate of the population of feral swine
               across the state because it's a really, really hard number to pin
-              down" [3].
+              down"[3].
             </p>
           </div>
         </div>
@@ -142,32 +142,32 @@
             <p class="px-5 py-2 mx-auto">
               Lack of standardization is causing researchers to miss
               opportunities, and data gathered about feral hogs is not always
-              useful.
+              useful. For example, Texas has a high number of sightings, and a large population.  The data does not adjust for the fact that Texas is the largest state. 
             </p>
             <ol class="px-5 list-group list-group-numbered">
               <li class="list-group-item border border-0">
                 The Arkansas Department of Agriculture records "removal" data on
-                the number of feral hogs that are killed, for instance, but
-                other states refer to killing hogs as "harvesting" or do not
-                track those numbers at all.[5]
+                the number of feral hogs that are killed, but
+                other states refer to killing hogs with different labels, such as "harvesting," or do not
+                track deaths at all.[5]
               </li>
               <li class="list-group-item border border-0">
                 How population data is formatted is also important, especially
                 if we are comparing results from one state to another: Texas
-                reports "about 2.6 million" feral swine [6] Georgia estimates
-                "200,000 to 600,000" [7] Florida indicates "over one-half
+                reports "about 2.6 million" feral swine[6] Georgia estimates
+                "200,000 to 600,000"[7] Florida indicates "over one-half
                 million."[8] <br />If some report the high data, some the low,
                 others what is observed, and still others the estimated number
                 or a range for the population data, then it is much harder for
-                researchers to make useful conclusions.
+                researchers to compile existing data and come to conclusions.
               </li>
               <li class="list-group-item border border-0">
-                Some of the most useful materials that I found online were
-                charts and graphs found on hunting sites. While such sources may
+                Some of the most interesting materials that I found online were
+                charts and graphs from hunting sites. While such sources may
                 provide valuable insights, they often lack rigorous scientific
                 documentation and verifiability. Comparative analysis of
                 multiple sources, including specialized hunting websites and
-                state-level reports, reveals both the challenges and potential
+                state-level reports, reveals significant differences, while also showing the challenges and potential
                 in feral swine population tracking.
               </li>
             </ol>
