--- a/index.html
+++ b/index.html
@@ -172,14 +172,8 @@
               </li>
             </ol>
             <p class="px-5 py-2 mx-auto">
-              In all fairness, sites like backfire.tv or captainexperiences.com
-              are doing a great job meeting their goal as a resource for
-              hunters. I just wish that they cited their sources: especially
-              considering the fact that news sites and students are linking to
-              their very clear and useful data.[9,10]<br />
-              Below, please find a chart that I put together based on the best
-              feral hog population information that I was able to find online,
-              and a list of the references that I used.
+             The proliferation of hunting-focused websites has contributed significantly to public knowledge about feral swine populations. While sites such as those maintained by recreational hunting organizations [9, 10] provide accessible and well-organized data presentations, their utility for academic research is limited by inconsistent source attribution. This limitation is particularly noteworthy given that at least one of these resources was cited by a news media outlet, potentially propagating unverified data.[20]
+The following analysis presents a compilation of feral swine population estimates derived from publicly available sources, with particular attention to documentation provided to the public by state and federal agencies. While this approach prioritizes accessibility and transparency, it necessarily excludes potentially valuable data sources hidden behind paywalls, which would be available to students and professional researchers.
             </p>
           </div>
         </div>
@@ -299,6 +293,10 @@
               <li class="list-group-item border border-0">
                 19. California Wildlife Agency. (n.d.). Wild pig conservation.
                 https://wildlife.ca.gov/Conservation/Mammals/Wild-Pig
+              <li class="list-group-item border border-0">
+                20.‘Biggest wild hog problem’ in the US? California is in the top 10 for feral pigs By Brianna Taylor. Updated November 28, 2023 9:26 AM.
+                https://www.sacbee.com/news/california/article282384908.html
+              </li>
               </li>
             </ul>
           </div>
