--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             </ol>
             <p class="px-5 py-2 mx-auto">
              The proliferation of hunting-focused websites has contributed significantly to public knowledge about feral swine populations. While sites such as those maintained by recreational hunting organizations [9, 10] provide accessible and well-organized data presentations, their utility for academic research is limited by inconsistent source attribution. This limitation is particularly noteworthy given that at least one of these resources was cited by a news media outlet, potentially propagating unverified data.[20]
-The following analysis presents a compilation of feral swine population estimates derived from publicly available sources, with particular attention to documentation provided to the public by state and federal agencies. While this approach prioritizes accessibility and transparency, it necessarily excludes potentially valuable data sources hidden behind paywalls, which would be available to students and professional researchers.
+The graph below presents a compilation of feral swine population estimates derived from publicly available sources, with particular attention to documentation provided to the public by state and federal agencies. While this approach prioritizes accessibility and transparency, it necessarily excludes potentially valuable data sources hidden behind paywalls, which would be available to students and professional researchers.
             </p>
           </div>
         </div>
