--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ The graph below presents a compilation of feral swine population estimates deriv
         <div class="album">
           <div class="container">
             <div class="px-5 pb-2 mx-auto h2">Conclusion</div>
-            <p class="px-5 pb-5 mx-auto">
+            <p class="pb-5 mx-auto">
               The study of feral swine populations is important, and requires
               continued methodological refinement. It would benefit from
               interdisciplinary collaboration, and standardized reporting
@@ -193,8 +193,8 @@ The graph below presents a compilation of feral swine population estimates deriv
         </div>
 
         <div
-          class="container"
-          style="position: relative; margin: auto; width: 80vw"
+          class="col-lg-6 col-md-8 mx-auto"
+         
         >
           <canvas id="myChart2"></canvas>
         </div>
