--- a/index.html
+++ b/index.html
@@ -177,8 +177,7 @@ The graph below presents a compilation of feral swine population estimates deriv
             </p>
           </div>
         </div>
-
-        <div class="album">
+        <div class="album py-2">
           <div class="container">
             <div class="px-5 pb-2 mx-auto h2">Conclusion</div>
             <p class="pb-5 mx-auto">
