adjusted list tag

--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
               As wild animals, feral swine are resistant to being tracked and
               counted, and their behaviors change when they are hunted. Falyn
               Owens, a wildlife biologist with the North Carolina Wildlife
-              Resources Commission, explained that "We don't in North
-              Carolina have a good estimate of the population of feral swine
-              across the state because it's a really, really hard number to pin
-              down"[3].
+              Resources Commission, explained that "We don't in North Carolina
+              have a good estimate of the population of feral swine across the
+              state because it's a really, really hard number to pin down"[3].
             </p>
           </div>
         </div>
@@ -142,14 +141,16 @@
             <p class="px-5 py-2 mx-auto">
               Lack of standardization is causing researchers to miss
               opportunities, and data gathered about feral hogs is not always
-              useful. For example, Texas has a high number of sightings, and a large population.  The data does not adjust for the fact that Texas is the largest state. 
+              useful. For example, Texas has a high number of sightings, and a
+              large population. The data does not adjust for the fact that Texas
+              is the largest state.
             </p>
             <ol class="px-5 list-group list-group-numbered">
               <li class="list-group-item border border-0">
                 The Arkansas Department of Agriculture records "removal" data on
-                the number of feral hogs that are killed, but
-                other states refer to killing hogs with different labels, such as "harvesting," or do not
-                track deaths at all.[5]
+                the number of feral hogs that are killed, but other states refer
+                to killing hogs with different labels, such as "harvesting," or
+                do not track deaths at all.[5]
               </li>
               <li class="list-group-item border border-0">
                 How population data is formatted is also important, especially
@@ -167,20 +168,34 @@
                 provide valuable insights, they often lack rigorous scientific
                 documentation and verifiability. Comparative analysis of
                 multiple sources, including specialized hunting websites and
-                state-level reports, reveals significant differences, while also showing the challenges and potential
-                in feral swine population tracking.
+                state-level reports, reveals significant differences, while also
+                showing the challenges and potential in feral swine population
+                tracking.
               </li>
             </ol>
             <p class="px-5 py-2 mx-auto">
-             The proliferation of hunting-focused websites has contributed significantly to public knowledge about feral swine populations. While sites such as those maintained by recreational hunting organizations [9, 10] provide accessible and well-organized data presentations, their utility for academic research is limited by inconsistent source attribution. This limitation is particularly noteworthy given that at least one of these resources was cited by a news media outlet, potentially propagating unverified data.[20]
-The graph below presents a compilation of feral swine population estimates derived from publicly available sources, with particular attention to documentation provided to the public by state and federal agencies. While this approach prioritizes accessibility and transparency, it necessarily excludes potentially valuable data sources hidden behind paywalls, which would be available to students and professional researchers.
+              The proliferation of hunting-focused websites has contributed
+              significantly to public knowledge about feral swine populations.
+              While sites such as those maintained by recreational hunting
+              organizations [9, 10] provide accessible and well-organized data
+              presentations, their utility for academic research is limited by
+              inconsistent source attribution. This limitation is particularly
+              noteworthy given that at least one of these resources was cited by
+              a news media outlet, potentially propagating unverified data.[20]
+              The graph below presents a compilation of feral swine population
+              estimates derived from publicly available sources, with particular
+              attention to documentation provided to the public by state and
+              federal agencies. While this approach prioritizes accessibility
+              and transparency, it necessarily excludes potentially valuable
+              data sources hidden behind paywalls, which would be available to
+              students and professional researchers.
             </p>
           </div>
         </div>
         <div class="album py-2">
           <div class="container">
             <div class="px-5 pb-2 mx-auto h2">Conclusion</div>
-            <p class="pb-5 mx-auto">
+            <p class="px-5 pb-5 mx-auto">
               The study of feral swine populations is important, and requires
               continued methodological refinement. It would benefit from
               interdisciplinary collaboration, and standardized reporting
@@ -191,10 +206,7 @@ The graph below presents a compilation of feral swine population estimates deriv
           </div>
         </div>
 
-        <div
-          class="col-lg-6 col-md-8 mx-auto"
-         
-        >
+        <div class="col-lg-6 col-md-8 mx-auto">
           <canvas id="myChart2"></canvas>
         </div>
       </div>
@@ -292,10 +304,13 @@ The graph below presents a compilation of feral swine population estimates deriv
               <li class="list-group-item border border-0">
                 19. California Wildlife Agency. (n.d.). Wild pig conservation.
                 https://wildlife.ca.gov/Conservation/Mammals/Wild-Pig
-              <li class="list-group-item border border-0">
-                20.‘Biggest wild hog problem’ in the US? California is in the top 10 for feral pigs By Brianna Taylor. Updated November 28, 2023 9:26 AM.
-                https://www.sacbee.com/news/california/article282384908.html
               </li>
+
+              <li class="list-group-item border border-0">
+                20.‘Biggest wild hog problem’ in the US? California is in the
+                top 10 for feral pigs By Brianna Taylor. Updated November 28,
+                2023 9:26 AM.
+                https://www.sacbee.com/news/california/article282384908.html
               </li>
             </ul>
           </div>
