--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           </div>
         </div>
 
-        <div class="col-lg-6 col-md-8 mx-auto">
+        <div class="py-2 col-lg-6 col-md-8 mx-auto">
           <canvas id="myChart2"></canvas>
         </div>
       </div>
