adjusted position of References

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
           </div>
         </div>
 
-        <div class="py-2 col-lg-6 col-md-8 mx-auto">
+        <div class="px-2 col-lg-6 col-md-8 mx-auto">
           <canvas id="myChart2"></canvas>
         </div>
       </div>
-      <div class="album py-5 px-5">
+      <div class="album py-5">
         <div class="container px-5">
           <div class="px-2 pb-2 mx-auto h2">References</div>
           <div>
