--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <canvas id="myChart2"></canvas>
         </div>
       </div>
-      <div class="album py-5">
+      <div class="album2 py-5">
         <div class="container px-5">
           <div class="px-2 pb-2 mx-auto h2">References</div>
           <div>
