--- a/index.html
+++ b/index.html
@@ -110,12 +110,11 @@
             </p>
           </div>
         </div>
-
-        <div class="row py-lg-5">
-          <div class="px-5 col-lg-6 col-md-8 mx-auto">
-            <div class="pb-2 mx-auto h2">
-              Preferred Approach: Report Sightings
-            </div>
+        <div class="px-5 pb-4 mx-auto">
+          <div class="pb-2 mx-auto h2">
+            Preferred Approach: Report Sightings
+          </div>
+          <div>
             <p class="lead text-muted">
               What seems to be the best of the current approaches, for research
               purposes, relies heavily on reported observations and consistent
@@ -127,6 +126,8 @@
               website.[4].
             </p>
           </div>
+        </div>
+        <div class="row py-lg-5">
           <div class="col-lg-6 col-md-8 mx-auto">
             <div class="chart">
               <canvas id="myChart"></canvas>
