adjusted wrapping for references

--- a/index.html
+++ b/index.html
@@ -218,8 +218,7 @@
               <li class="list-group-item border border-0">
                 1. United States Department of Agriculture, Animal and Plant
                 Health Inspection Service. (n.d.). History of feral swine in the
-                Americas.
-                https://www.aphis.usda.gov/operational-wildlife-activities/feral-swine/distribution
+                Americas.https://www.aphis.usda.gov/operational-wildlife-activities/feral-swine/distribution
               </li>
               <li class="list-group-item border border-0">
                 2. United States Department of Agriculture, Southwest Climate
@@ -228,8 +227,8 @@
               </li>
               <li class="list-group-item border border-0">
                 3. Talton, T. (2023, November 27). Feral hogs a largely unseen
-                but costly problem in state. Coastal Review.
-                https://coastalreview.org/2023/11/feral-hogs-a-largely-unseen-but-costly-problem-in-state/
+                but costly problem in state. Coastal
+                Review.https://coastalreview.org/2023/11/feral-hogs-a-largely-unseen-but-costly-problem-in-state/
               </li>
               <li class="list-group-item border border-0">
                 4. University of Georgia Center for Invasive Species and
@@ -239,8 +238,8 @@
               </li>
               <li class="list-group-item border border-0">
                 5. Arkansas Department of Agriculture. (n.d.). Feral hog
-                population and removal data.
-                https://agriculture.arkansas.gov/arkansas-department-of-agriculture-services/feral-hog/
+                population and removal
+                data.https://agriculture.arkansas.gov/arkansas-department-of-agriculture-services/feral-hog/
               </li>
               <li class="list-group-item border border-0">
                 6. Texas Farm Bureau. (n.d.). Controlling feral hogs.
