updated list spacing in references

--- a/index.html
+++ b/index.html
@@ -223,7 +223,8 @@
               <li class="list-group-item border border-0">
                 2. United States Department of Agriculture, Southwest Climate
                 Hub. (n.d.). Feral swine bomb.
-                https://www.climatehubs.usda.gov/hubs/southwest/topic/feral-swine-bomb/li>
+                https://www.climatehubs.usda.gov/hubs/southwest/
+                topic/feral-swine-bomb/li>
               </li>
               <li class="list-group-item border border-0">
                 3. Talton, T. (2023, November 27). Feral hogs a largely unseen
@@ -247,7 +248,8 @@
               </li>
               <li class="list-group-item border border-0">
                 7. University of Georgia Extension. (2020, January). Feral hogs.
-                https://site.extension.uga.edu/townsandunionag/2020/01/feral-hogs/
+                "https://site.extension.uga.edu/townsandunionag/
+                2020/01/feral-hogs/"
               </li>
               <li class="list-group-item border border-0">
                 8. North Palm Beach County Invasive Species. (n.d.). Feral hogs:
@@ -265,8 +267,8 @@
               </li>
               <li class="list-group-item border border-0">
                 11. North Carolina Department of Agriculture. (n.d.). Feral
-                swine information.
-                https://www.ncagr.gov/divisions/veterinary/FeralSwine/Learn
+                swine information. https://www.ncagr.gov/divisions/veterinary/
+                FeralSwine/Learn
               </li>
               <li class="list-group-item border border-0">
                 12. Farm Journal's Pork Business. (n.d.). Meet Mississippi's
@@ -293,7 +295,7 @@
               </li>
               <li class="list-group-item border border-0">
                 17. Sacramento Bee. (n.d.). Wild hogs in California.
-                https://www.sacbee.com/news/california/article282384908.html
+                https://www.sacbee.com/news/california/ article282384908.html
               </li>
               <li class="list-group-item border border-0">
                 18. South Carolina Department of Natural Resources. (n.d.). Wild
@@ -306,8 +308,8 @@
               <li class="list-group-item border border-0">
                 20.‘Biggest wild hog problem’ in the US? California is in the
                 top 10 for feral pigs By Brianna Taylor. Updated November 28,
-                2023 9:26 AM.
-                https://www.sacbee.com/news/california/article282384908.html
+                2023 9:26 AM. https://www.sacbee.com/news/california/
+                article282384908.html
               </li>
             </ul>
           </div>
