References section is in progress- revising to add 2b, 2c, 2d

--- a/index.html
+++ b/index.html
@@ -127,38 +127,38 @@
           </p>
           <p class="pb-2 mx-auto">
             While the biological and ecological dimensions of the feral swine
-            invasion have received substantial scholarly attention, considerably
-            less research has focused on the methodological challenges inherent
-            in population monitoring and the resulting data inconsistencies that
-            complicate management efforts. Studies have attempted to quantify
-            feral swine populations at state or regional levels using various
-            methodologies, including camera trapping (Massei et al., 2018),
-            mark-recapture techniques (Hanson et al., 2008), and aerial surveys
-            (Campbell et al., 2010). However, these approaches vary
-            significantly in their implementation, accuracy, and geographic
-            coverage. The resulting heterogeneity in population estimation
-            methodologies creates substantial challenges for policymakers and
-            wildlife managers attempting to allocate resources effectively or
-            evaluate management success across jurisdictional boundaries. [2b,
-            2c, 2d]
+            lifecycle have received substantial scholarly attention,
+            considerably less research has focused on the methodological
+            challenges inherent in population monitoring and the resulting data
+            inconsistencies. Studies have attempted to quantify feral swine
+            populations at state or regional levels using various methodologies,
+            including camera trapping (Massei et al., 2018), mark-recapture
+            techniques (Hanson et al., 2008), and aerial surveys (Campbell et
+            al., 2010). However, these approaches vary significantly in their
+            implementation, accuracy, and geographic coverage. The resulting
+            heterogeneity in population estimation methodologies creates
+            substantial challenges for policymakers and wildlife managers
+            attempting to allocate resources effectively or evaluate management
+            success (or failure) across jurisdictional boundaries. [2b, 2c, 2d]
           </p>
           <p class="pb-2 mx-auto">
             I have limited access to studies that can be found behind paywalls,
-            but it seems clear that there are no standards to determine how
-            population data for feral swine should be collected, reported, and
-            utilized across different states and agencies. This knowledge gap
-            impedes the development of coordinated management strategies and
-            prevents accurate assessment of population trends at regional or
-            national scales. It also prevents researchers from effectively
-            combining their data and perhaps reaching useful conclusions.
+            but it seems clear that there are no consistent standards to
+            determine how population data for feral swine should be collected,
+            reported, and utilized across different states and agencies. This
+            knowledge gap impedes the development of coordinated management
+            strategies and prevents accurate assessment of population trends at
+            regional or national scales. It also prevents researchers from
+            effectively combining their data and perhaps reaching useful
+            conclusions.
           </p>
           <p class="pb-2 mx-auto">
             The objective of this article is to systematically examine the
             methodological approaches, reporting practices, and data
             inconsistencies in feral swine population estimation across the
-            United States. My focus is on research information that is readily
-            available to members of the public who search for information on the
-            topic online.
+            United States, as reported online. My focus is on research
+            information that is readily available to members of the public who
+            search for information on the topic.
           </p>
 
           <ol class="px-5 py-2 mx-5">
